petal_core/src/snapshots/petal_core__parser__tests__external_imports-3.snap
---
source: petal_core/src/parser.rs
expression: "parse_stmt(\"import foo(a: Int, b: Int): Bool\")"
---
(
    [
        Identifier {
            name: "foo",
            span: Span {
                start: Pos(
                    7,
                ),
                end: Some(
                    Pos(
                        9,
                    ),
                ),
            },
            symbol_id: None,
        },
        Identifier {
            name: "a",
            span: Span {
                start: Pos(
                    11,
                ),
                end: Some(
                    Pos(
                        11,
                    ),
                ),
            },
            symbol_id: None,
        },
        Identifier {
            name: "b",
            span: Span {
                start: Pos(
                    19,
                ),
                end: Some(
                    Pos(
                        19,
                    ),
                ),
            },
            symbol_id: None,
        },
    ],
    [],
    [],
    [],
    [
        ImportFunc {
            signature: FuncSignature {
                ident: IdentId(
                    1v1,
                ),
                type_params: [],
                args: [
                    FuncArg {
                        ident: IdentId(
                            2v1,
                        ),
                        ty: TypeAnnotation {
                            name: "Int",
                            span: Span {
                                start: Pos(
                                    14,
                                ),
                                end: Some(
                                    Pos(
                                        16,
                                    ),
                                ),
                            },
                        },
                        span: Span {
                            start: Pos(
                                11,
                            ),
                            end: Some(
                                Pos(
                                    16,
                                ),
                            ),
                        },
                    },
                    FuncArg {
                        ident: IdentId(
                            3v1,
                        ),
                        ty: TypeAnnotation {
                            name: "Int",
                            span: Span {
                                start: Pos(
                                    22,
                                ),
                                end: Some(
                                    Pos(
                                        24,
                                    ),
                                ),
                            },
                        },
                        span: Span {
                            start: Pos(
                                19,
                            ),
                            end: Some(
                                Pos(
                                    24,
                                ),
                            ),
                        },
                    },
                ],
                return_ty: Some(
                    TypeAnnotation {
                        name: "Bool",
                        span: Span {
                            start: Pos(
                                28,
                            ),
                            end: Some(
                                Pos(
                                    31,
                                ),
                            ),
                        },
                    },
                ),
                span: Span {
                    start: Pos(
                        7,
                    ),
                    end: Some(
                        Pos(
                            31,
                        ),
                    ),
                },
            },
            span: Span {
                start: Pos(
                    0,
                ),
                end: Some(
                    Pos(
                        31,
                    ),
                ),
            },
        },
    ],
)
