petal_core/src/snapshots/petal_core__parser__tests__external_imports.snap
---
source: petal_core/src/parser.rs
expression: "parse_stmt(\"import foo()\")"
---
(
    [
        Identifier {
            name: "foo",
            span: Span {
                start: Pos(
                    7,
                ),
                end: Some(
                    Pos(
                        9,
                    ),
                ),
            },
            symbol_id: None,
        },
    ],
    [],
    [
        StmtNode {
            stmt: Import(
                ImportFunc {
                    ident: IdentId(
                        1v1,
                    ),
                    args: [],
                    return_ty: None,
                },
            ),
            span: Span {
                start: Pos(
                    0,
                ),
                end: Some(
                    Pos(
                        11,
                    ),
                ),
            },
        },
    ],
    [],
)
